force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Tender_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Type_Formula__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Tender_Type_for_Pledges__c) &amp; TEXT(ucinn_ascendv2__Tender_Type_for_Gifts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tender Type</label>
    <type>Text</type>
</CustomField>