force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Test_Pull_From_DD__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Test_Pull_From_DD__c</fullName>
    <label>Test Pull From DD (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>