force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Payment__c</fullName>
    <label>Total Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>