force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_ID__c</fullName>
    <description>Used with Review Transaction to identify external system&apos;s transaction ID.</description>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>