force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Number__c</fullName>
    <label>Transaction Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>