force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Pledge Payment</fullName>
            </value>
            <value>
                <fullName>Outright Gift</fullName>
            </value>
            <value>
                <fullName>Matching Gift</fullName>
            </value>
            <value>
                <fullName>Matching Gift Payment</fullName>
            </value>
            <value>
                <fullName>Recurring Gift Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>