force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transfer_Date__c</fullName>
    <label>Transfer Date (DEPRECATED)</label>
    <type>Date</type>
</CustomField>