force-app/main/default/objects/ucinn_ascendv2__Payment__c/listViews/All_Gift_Payments.listView-meta.xml
<ListView>
    <fullName>All_Gift_Payments</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Opportunity__c</columns>
    <columns>ucinn_ascendv2__Designation_Detail__c</columns>
    <columns>ucinn_ascendv2__Designation__c</columns>
    <columns>ucinn_ascendv2__Credit_Date__c</columns>
    <columns>ucinn_ascendv2__Payment_Amount__c</columns>
    <columns>ucinn_ascendv2__External_System_ID__c</columns>
    <columns>ucinn_ascendv2__Payment_Group_ID__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>ucinn_ascendv2__Transaction_Type__c</columns>
    <columns>ucinn_ascendv2__Tender_Type_for_Gifts__c</columns>
    <columns>ucinn_ascendv2__Tender_Type_for_Pledges__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>ucinn_ascendv2__Is_Tax_Receipt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Matching Gift</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__External_System_ID__c</field>
        <operation>startsWith</operation>
        <value>ISUF</value>
    </filters>
    <label>All Gift Payments</label>
</ListView>