force-app/main/default/objects/ucinn_ascendv2__Payment__c/listViews/My_list_view.listView-meta.xml
<ListView>
    <fullName>My_list_view</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Amount_Paid_to_Date__c</columns>
    <columns>ucinn_ascendv2__Send_to_G_L__c</columns>
    <columns>ucinn_ascendv2__Sent_to_G_L_Date__c</columns>
    <columns>Is_Sent_to_G_L__c</columns>
    <columns>ucinn_ascendv2__Credit_Date__c</columns>
    <columns>ucinn_ascendv2__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Session__c</field>
        <operation>equals</operation>
        <value>S220301550559</value>
    </filters>
    <label>UCI ticket view</label>
</ListView>